# catalog/pkg/openapi/model_catalog_source_preview_response_all_of_summary.go
@@ -26,7 +26,7 @@ type CatalogSourcePreviewResponseAllOfSummary struct {
 	// Number of models that would be excluded
 	ExcludedModels int32 `json:"excludedModels"`
 	// Whether any evaluated model is a gated Hugging Face model, including models outside the current page.
-	HasGatedModels bool `json:"hasGatedModels"`
+	HasGatedAccessDeniedModels bool `json:"hasGatedAccessDeniedModels"`
 }
 
 type _CatalogSourcePreviewResponseAllOfSummary CatalogSourcePreviewResponseAllOfSummary
@@ -35,12 +35,12 @@ type _CatalogSourcePreviewResponseAllOfSummary CatalogSourcePreviewResponseAllOf
 // This constructor will assign default values to properties that have it defined,
 // and makes sure properties required by API are set, but the set of arguments
 // will change when the set of required properties is changed
-func NewCatalogSourcePreviewResponseAllOfSummary(totalModels int32, includedModels int32, excludedModels int32, hasGatedModels bool) *CatalogSourcePreviewResponseAllOfSummary {
+func NewCatalogSourcePreviewResponseAllOfSummary(totalModels int32, includedModels int32, excludedModels int32, hasGatedAccessDeniedModels bool) *CatalogSourcePreviewResponseAllOfSummary {
 	this := CatalogSourcePreviewResponseAllOfSummary{}
 	this.TotalModels = totalModels
 	this.IncludedModels = includedModels
 	this.ExcludedModels = excludedModels
-	this.HasGatedModels = hasGatedModels
+	this.HasGatedAccessDeniedModels = hasGatedAccessDeniedModels
 	return &this
 }
 
@@ -124,28 +124,28 @@ func (o *CatalogSourcePreviewResponseAllOfSummary) SetExcludedModels(v int32) {
 	o.ExcludedModels = v
 }
 
-// GetHasGatedModels returns the HasGatedModels field value
-func (o *CatalogSourcePreviewResponseAllOfSummary) GetHasGatedModels() bool {
+// GetHasGatedAccessDeniedModels returns the HasGatedAccessDeniedModels field value
+func (o *CatalogSourcePreviewResponseAllOfSummary) GetHasGatedAccessDeniedModels() bool {
 	if o == nil {
 		var ret bool
 		return ret
 	}
 
-	return o.HasGatedModels
+	return o.HasGatedAccessDeniedModels
 }
 
-// GetHasGatedModelsOk returns a tuple with the HasGatedModels field value
+// GetHasGatedAccessDeniedModelsOk returns a tuple with the HasGatedAccessDeniedModels field value
 // and a boolean to check if the value has been set.
-func (o *CatalogSourcePreviewResponseAllOfSummary) GetHasGatedModelsOk() (*bool, bool) {
+func (o *CatalogSourcePreviewResponseAllOfSummary) GetHasGatedAccessDeniedModelsOk() (*bool, bool) {
 	if o == nil {
 		return nil, false
 	}
-	return &o.HasGatedModels, true
+	return &o.HasGatedAccessDeniedModels, true
 }
 
-// SetHasGatedModels sets field value
-func (o *CatalogSourcePreviewResponseAllOfSummary) SetHasGatedModels(v bool) {
-	o.HasGatedModels = v
+// SetHasGatedAccessDeniedModels sets field value
+func (o *CatalogSourcePreviewResponseAllOfSummary) SetHasGatedAccessDeniedModels(v bool) {
+	o.HasGatedAccessDeniedModels = v
 }
 
 func (o CatalogSourcePreviewResponseAllOfSummary) MarshalJSON() ([]byte, error) {
@@ -161,7 +161,7 @@ func (o CatalogSourcePreviewResponseAllOfSummary) ToMap() (map[string]interface{
 	toSerialize["totalModels"] = o.TotalModels
 	toSerialize["includedModels"] = o.IncludedModels
 	toSerialize["excludedModels"] = o.ExcludedModels
-	toSerialize["hasGatedModels"] = o.HasGatedModels
+	toSerialize["hasGatedAccessDeniedModels"] = o.HasGatedAccessDeniedModels
 	return toSerialize, nil
 }
 
